# SimpleSat

./: CHANGELOG.md  README.md  simplesat.cabal
src/: SimpleSat.hs  Solver.hs  Test.hs
