cabal-version:      3.0

-- The name of the package.
name:               simplesat

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A simple DPLL based SAT solver

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            NONE

-- The package author(s).
author:             KJ

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         krystof.jungmann@gmx.com

-- A copyright notice.
-- copyright:
category:           Math

-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files: 
    CHANGELOG.md,
    README.md

library
    exposed-modules:
        SimpleSat

    other-modules:
        Solver,
        Test
    
    build-depends:    
        base ^>=4.14.3.0,
        containers,
        directory,
        microlens-platform,
        megaparsec,
        mtl

    hs-source-dirs:   src   

    default-language: Haskell2010
